--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -12,4 +12,6 @@
 , "contextOfRole_message": "Cannot get the context of this role: {{- role}}."
 , "role_title": "Type of the role"
 , "role_message": "Cannot get the type of this role: {{- role}}."
+, "rolekind_title": "Kind of the role"
+, "rolekind_message": "Cannot determine whether this is a user role, a context role, a thing role or a public role: {{- role}}."
 }
