--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -16,4 +16,6 @@
 , "rolekind_message": "Kan niet vaststellen wat voor soort rol dit is: een gebruikersrol, een dingrol, een contextrol of een publieke rol: {{- role}}."
 , "createContext_title": "Context aanmaken"
 , "createContext_message": "Het is niet gelukt een context aan te maken van dit type: {{- type}}."
+, "importContexts_title": "Context(en importeren"
+, "importContexts_message": "Het is niet gelukt om contexten te importeren."
 }
