--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -20,4 +20,10 @@
 , "importContexts_message": "Could not import contexts."
 , "importTransaction_title": "Import Transaction"
 , "importTransaction_message": "Could not import transaction."
+, "clipboardSet_title": "Clipboard"
+, "clipboardSet_message": "Could not put this role on the clipboard."
+, "setProperty_title": "Property"
+, "setProperty_message": "Could not change the property {{- property}}."
+, "screen_IsOnScreen_title": "Closing/opening the context"
+, "screen_IsOnScreen_message": "Could not property register that this context is closed or opened. Your peers will not know you have closed or opened it."
 }
