--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -30,4 +30,6 @@
 , "deleteProperty_message": "Could not delete the property {{- property}}."
 , "screen_IsOnScreen_title": "Closing/opening the context"
 , "screen_IsOnScreen_message": "Could not property register that this context is closed or opened. Your peers will not know you have closed or opened it."
+, "action_title": "Action"
+, "action_message": "Could not execute the action {{- action}}."
 }
