--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -38,4 +38,6 @@
 , "removeRole_message": "Could not remove this role."
 , "roleinstance_removecontext_title": "Remove context?"
 , "roleinstance_removecontextmessage": "Do you want to remove the context that fills the role as well?"
+, "removeContext_title": "Context"
+, "removeContext_message": "Could not remove this context."
 }
