The bind functions now return promises
The React contexts PSRoleInstances and PSRol expose
a 'bind' function. This function now returns a promise,
just like the PDRproxy itself.

--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -42,4 +42,6 @@
 , "removeContext_message": "Could not remove this context."
 , "fillRole_title": "Fill a role"
 , "fillRole_message": "Could not fill this role."
+, "fillerNotAllowed_title": "Filler rejected"
+, "fillerNotAllowed_message": "This type of filler is not allowed here!"
 }
