--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -42,4 +42,6 @@
 , "removeContext_message": "Kon deze context niet verwijderen."
 , "fillRole_title": "Vul een rol"
 , "fillRole_message": "Kon deze rol niet vullen."
+, "fillerNotAllowed_title": "Vuller afgewezen"
+, "fillerNotAllowed_message": "Dit type vuller is hier niet toegestaan!"
 }
