--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -58,4 +58,9 @@
 , "retrieveFile_message": "Could not retieve the file or the property."
 , "fileName_invalid": "Provide a valid filename."
 , "mimeType_invalid": "Provide a valid MIME type."
+, "tablePasteRole_Create": "Create a new role for this form and then fill it with the role on the clipboard."
+, "tablePasteRole_Incompatible": "The role on the clipboard cannot fill a role in this form."
+, "tablePasteRole_Alt": "Paste the role on the clipboard"
+, "formPasteRole_Fill": "Fill the role in this form with the role on the clipboard."
+, "openPublicResource": "Open the public perspective on this role or context."
 }
