--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -58,4 +58,9 @@
 , "retrieveFile_message": "Kon het bestand niet ophalen."
 , "fileName_invalid": "Geef een geldige bestandsnaam."
 , "mimeType_invalid": "Geef een geldig MIME type."
+, "tablePasteRole_Create": "Maak een nieuwe rol voor dit formulier en vul hem met de rol op het klembord."
+, "tablePasteRole_Incompatible": "De rol op het klembord kan deze rol niet vullen."
+, "tablePasteRole_Alt": "Vul met de rol op het klembord."
+, "formPasteRole_Fill": "Vul de rol in dit formulier met de rol op het klembord."
+, "openPublicResource": "Open het publieke perspectief op deze rol of context."
 }
