--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -63,4 +63,5 @@
 , "tablePasteRole_Alt": "Vul met de rol op het klembord."
 , "formPasteRole_Fill": "Vul de rol in dit formulier met de rol op het klembord."
 , "openPublicResource": "Open het publieke perspectief op deze rol of context."
+, "openContext": "Een moment terwijl de context wordt geopend..."
 }
