--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -64,4 +64,5 @@
 , "formPasteRole_Fill": "Fill the role in this form with the role on the clipboard."
 , "openPublicResource": "Open the public perspective on this role or context."
 , "openContext": "Please wait while this context is being loaded..."
+, "contextDropdown_title": "Just the role"
 }
