--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -65,4 +65,5 @@
 , "openPublicResource": "Open het publieke perspectief op deze rol of context."
 , "openContext": "Een moment terwijl de context wordt geopend..."
 , "contextDropdown_title": "Alleen de rol"
+, "chatComponent_recordAudio": "Klik en houd vast om op te nemen. Laat los om te stoppen."
 }
