--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -73,4 +73,13 @@
 , "ppsharedfilestorage_keyunknown": "The perspectives sharedfilestorage service did not receive a key that has not been given out by the service itself."
 , "ppsharedfilestorage_maxfilesreached": "The perspectives sharedfilestorage does not accept more files."
 , "ppsharedfilestorage_serviceerror": "The perspectives sharedfilestorage does not function correctly. See the console for technical information."
+, "chatcomponent_nostorageservice_title": "No file sharing"
+, "chatcomponent_nostorageservice": "For this installation, no functioning shared file storage could be configured. This means you cannot share media files."
+, "chatComponent_limit_title": "Limited file sharing"
+, "chatComponent_limit_body": "You have not configured your own file storage yet. See below."
+, "chatComponent_exhausted_title": "Courtesy file sharing exhausted"
+, "chatComponent_exhausted_body": "Until you configure your own file storage, you cannot share media files with peers. See below."
+, "chatComponent_instruction_title": "Configure cloud service"
+, "chatComponent_instruction_body1": "To share files, your installation needs a place to put them in, where others can fetch them from. Currently it uses a cloud service provided by courtesy of the Perspectives project. However, this use is limited and you have {{remainingUploads}} uploads left. [[link:MySharedFileServices|Set up your own storage]] (for free)."
+, "chatComponent_instruction_body2": "You have exhausted the default storage facility provided by courtesy of the Perspectives project. In order to keep sharing files with others, [[link:MySharedFileServices|set up your own storage]] (for free)."
 }
