--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -73,4 +73,13 @@
 , "ppsharedfilestorage_keyunknown": "De perspectives sharedfilestorage service ontving een sleutel die niet door de service zelf werd uitgegeven."
 , "ppsharedfilestorage_maxfilesreached": "De perspectives sharedfilestorage accepteert niet meer bestanden."
 , "ppsharedfilestorage_serviceerror": "De perspectives sharedfilestorage functioneert niet goed. Zie de console voor technische informatie."
+, "chatcomponent_nostorageservice_title": "Bestandsdelen niet mogelijk"
+, "chatcomponent_nostorageservice": "Voor deze installatie kan geen gedeelde opslag van bestanden worden geconfigureerd. Helaas kun je geen media bestanden met anderen delen."
+, "chatComponent_limit_title": "Beperkt bestand delen"
+, "chatComponent_limit_body": "Je hebt nog niet je eigen bestandsopslag geconfigureerd. Zie hieronder."
+, "chatComponent_exhausted_title": "Limiet bestandsopslag bereikt"
+, "chatComponent_exhausted_body": "Totdat je je eigen bestandsopslag configureert, kun je geen bestanden meer delen. Zie hieronder."
+, "chatComponent_instruction_title": "Configureer bestandsopslag"
+, "chatComponent_instruction_body1": "Om bestanden te delen, heeft je installatie een plaats nodig om ze op te slaan, waaruit anderen ze kunnen ophalen. Op dit moment gebruikt hij een cloud service die door het Perspectives project beschikbaar wordt gesteld. Maar je kan daar maar beperkt gebruik van maken en je mag nog maar {{remainingUploads}} keer uploaden. [[link:link:MySharedFileServices|Maak je eigen (gratis) opslag aan.]]"
+, "chatComponent_instruction_body2": "Je hebt het aantal bestanden dat je bij de Perspectives Cloud Service mag opslaan, bereikt. Om bestanden te kunnen blijven delen, [[link:MySharedFileServices|maak je je eigen (gratis) opslag aan.]]"
 }
