Translation of action names, setting the language.

--- a/src/lang/en/preact.json
+++ b/src/lang/en/preact.json
@@ -82,4 +82,5 @@
 , "chatComponent_instruction_title": "Configure cloud service"
 , "chatComponent_instruction_body1": "To share files, your installation needs a place to put them in, where others can fetch them from. Currently it uses a cloud service provided by courtesy of the Perspectives project. However, this use is limited and you have {{remainingUploads}} uploads left. [[link:MySharedFileServices|Set up your own storage]] (for free)."
 , "chatComponent_instruction_body2": "You have exhausted the default storage facility provided by courtesy of the Perspectives project. In order to keep sharing files with others, [[link:MySharedFileServices|set up your own storage]] (for free)."
+, "table_subscriptionLeader": "Table for the role "
 }
