--- a/src/lang/nl/preact.json
+++ b/src/lang/nl/preact.json
@@ -82,4 +82,5 @@
 , "chatComponent_instruction_title": "Configureer bestandsopslag"
 , "chatComponent_instruction_body1": "Om bestanden te delen, heeft je installatie een plaats nodig om ze op te slaan, waaruit anderen ze kunnen ophalen. Op dit moment gebruikt hij een cloud service die door het Perspectives project beschikbaar wordt gesteld. Maar je kan daar maar beperkt gebruik van maken en je mag nog maar {{remainingUploads}} keer uploaden. [[link:link:MySharedFileServices|Maak je eigen (gratis) opslag aan.]]"
 , "chatComponent_instruction_body2": "Je hebt het aantal bestanden dat je bij de Perspectives Cloud Service mag opslaan, bereikt. Om bestanden te kunnen blijven delen, [[link:MySharedFileServices|maak je je eigen (gratis) opslag aan.]]"
+, "table_subscriptionLeader": "Tabel voor de rol "
 }
